adjusted nav to justify right so text is on right side of screen alignment, fixed max width to account for changes in nav

--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -34,8 +34,9 @@ header h1{
 nav {
     display:flex;
     background-color: blue;
-    margin: 0 25%;
-    justify-content: space-between;
+    /* float: right; */
+    /* margin: 0 25%; */
+    justify-content: right;
     
 }
   
@@ -53,7 +54,7 @@ nav a{
     color: black;
   }
   
- @media screen and (max-width: 892px) {
+ @media screen and (max-width:446px) {
     nav{
         flex-direction: column;
         align-items: center;
